--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,6 +38,11 @@
       <string>DBSCAN</string>
      </property>
     </item>
+    <item>
+     <property name="text">
+      <string>QSCAN</string>
+     </property>
+    </item>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
@@ -167,7 +172,7 @@
      <rect>
       <x>530</x>
       <y>60</y>
-      <width>171</width>
+      <width>151</width>
       <height>23</height>
      </rect>
     </property>
@@ -201,7 +206,7 @@
    <widget class="QPushButton" name="browseButton">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>570</x>
       <y>10</y>
       <width>71</width>
       <height>21</height>
@@ -214,7 +219,7 @@
    <widget class="QLineEdit" name="dataFileBox">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>480</x>
       <y>30</y>
       <width>231</width>
       <height>21</height>
@@ -224,7 +229,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>480</x>
       <y>10</y>
       <width>71</width>
       <height>16</height>
@@ -311,15 +316,15 @@
      <rect>
       <x>600</x>
       <y>90</y>
-      <width>101</width>
+      <width>111</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>Write out results</string>
+     <string>Write out clusters</string>
     </property>
     <property name="checked">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QCheckBox" name="odcCheckBox">
@@ -344,7 +349,7 @@
       <x>480</x>
       <y>500</y>
       <width>231</width>
-      <height>131</height>
+      <height>141</height>
      </rect>
     </property>
    </widget>
@@ -364,7 +369,7 @@
    <widget class="QPushButton" name="loadButton">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>640</x>
       <y>10</y>
       <width>71</width>
       <height>21</height>
@@ -573,6 +578,32 @@
     </property>
     <property name="text">
      <string>Point</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="terminateButton">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>60</y>
+      <width>31</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>X</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="clearLogButton">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>480</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear</string>
     </property>
    </widget>
   </widget>
